[package]
name = "sodmb"
version = "0.1.0"
authors = ["techmccat <alessioa02004@gmail.com>"]
edition = "2018"

[features]
default = ["sqlite"]
allbackends = ["cache", "mssql", "mysql", "postgres", "sqlite"]
nocache = []

cache = ["sqlx"]
mssql = ["cache", "sqlx/mssql"]
mysql = ["cache", "sqlx/mysql"]
postgres = ["cache", "sqlx/postgres"]
sqlite = ["cache", "sqlx/sqlite"]

[dependencies]
futures = "0.3"
http = "0.2"
reqwest = { version = "0.11", default_features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
streamcatcher = { version = "0.1", features = ["tokio-compat"] }
tokio-util = { version = "0.6", features= ["compat"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.serenity]
version = "0.10"
features = ["client", "gateway", "rustls_backend", "model", "cache", "framework", "standard_framework", "voice"]

[dependencies.songbird]
version = "0.1"
features = ["gateway", "serenity-rustls", "builtin-queue", "driver"]

[dependencies.sqlx]
optional = true
version = "0.4"
features = ["any", "sqlite", "macros", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread", "process"]
